bk_ida/gccida/g2/cpp_finish_options
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_finish_options/src/cppinit.c:1469:27: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void  cpp_finish_options( cpp_reader_0 *pfile) 
                          ^~~~~~~~~~~~
                          cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_finish_options/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_finish_options/src/cppinit.c:1482:1: error: unknown type name 'cpp_hashnode_0'; did you mean 'cpp_hashnode'?
cpp_hashnode_0 *v13; // rax 
^~~~~~~~~~~~~~
cpp_hashnode
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_finish_options/src/cpplib.h:42:29: note: 'cpp_hashnode' declared here
typedef struct cpp_hashnode cpp_hashnode;
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_finish_options/src/cppinit.c:1483:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 v14; // [rsp+0h] [rbp-38h] BYREF 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_finish_options/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_finish_options/src/cppinit.c:1487:34: error: use of undeclared identifier 'off_6C8A01'
name = ( const unsigned __int8 *)off_6C8A01; 
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_finish_options/src/cppinit.c:1495:39: error: use of undeclared identifier 'unk_65C530'
if ( i == ( const  struct named_op *)&unk_65C530 ) 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_finish_options/src/cppinit.c:1526:13: error: expected identifier or '('
 struct arg = ( const unsigned __int8 *)j->arg; 
            ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cpp_finish_options/src/obj/cppinit.o] Error 1
